# ChangeLog for sys-apps/psmisc
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/psmisc/Attic/ChangeLog,v 1.13 2003/03/20 13:22:51 seemant Exp $

*psmisc-21.2-r1 (20 Mar 2003)

  20 Mar 2003; Seemant Kulleen <seemant@gentoo.org> psmisc-19-r3.ebuild,
  psmisc-19-r3.ebuild, psmisc-21.2-r1.ebuild:
  removed pic cruft

*psmisc-21.2 (19 Nov 2002)

  20 Mar 2003; Seemant Kulleen <seemant@gentoo.org> psmisc-19-r3.ebuild,
  psmisc-19-r3.ebuild, psmisc-21.2.ebuild:
  removed pic cruft

  24 Feb 2003; Nicholas Wourms <dragon@gentoo.org> psmisc-21.2.ebuild :
  Marked as stable for mips.

  20 Feb 2003; Zach Welch <zwelch@gentoo.org> psmisc-21.2.ebuild :
  Added arm to keywords.

  09 Feb 2003; Guy Martin <gmsoft@gentoo.org> psmisc-21.2.ebuild :
  Added hppa to keywords.

  01 Jan 2003; Mike Frysinger <vapier@gentoo.org> :
  Unmasked KEYWORDS for all arch's

  23 Oct 2002; Mike Frysinger <vapier@gentoo.org> :
  Version bump, enhancements, change to use psmisc source

*psmisc-19-r3 (1 Feb 2002)

  24 Feb 2003; Nicholas Wourms <dragon@gentoo.org> psmisc-19-r3.ebuild :
  Marked as stable for mips.

  09 Feb 2003; Seemant Kulleen <seemant@gentoo.org> psmisc-19-r3.ebuild :

  Sed delimiters are now : instead of /, closing bug #15006 by Blu3
  <david+gentoo.org@blue-labs.org>

  23 Oct 2002; Mike Frysinger <vapier@gentoo.org> :
  Removed bootcd USE flag

  14 Jul 2002; phoen][x <phoenix@gentoo.org> psmisc-19-r3.ebuild :
  Added LICENSE, KEYWORDS, SLOT.

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.