@@ -1,1 +1,2 @@
 MD5 0749017f500b171f053d7c1fd72df537 psmisc-21.2.tar.gz 258561
+MD5 68f826245b24b3cbb5bf9ac193d00f10 psmisc-21.2-selinux.patch.bz2 84457
