@@ -1,22 +1,33 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/psmisc/Attic/psmisc-21.2-r1.ebuild,v 1.1 2003/03/20 13:22:51 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/psmisc/Attic/psmisc-21.2-r1.ebuild,v 1.2 2003/03/25 17:16:33 method Exp $
 
-IUSE="nls"
+IUSE="nls selinux"
 
 DESCRIPTION="A set of tools that use the proc filesystem"
-SRC_URI="mirror://sourceforge/psmisc/${P}.tar.gz"
 HOMEPAGE="http://psmisc.sourceforge.net/"
+SRC_URI="mirror://sourceforge/psmisc/${P}.tar.gz
+    selinux? mirror://gentoo/${P}-selinux.patch.bz2"
 
 SLOT="0"
 LICENSE="GPL-2"
 KEYWORDS="x86 ppc sparc alpha hppa arm mips"
 
-DEPEND=">=sys-libs/ncurses-5.2-r2"
+DEPEND=">=sys-libs/ncurses-5.2-r2
+    selinux? ( >=sys-apps/selinux-small-2003011510-r2 )"
+
+src_unpack() {
+    unpack ${A}
+    cd ${S}
+
+    #necessary selinux patch 
+    use selinux && epatch ${DISTDIR}/${P}-selinux.patch.bz2
+}
 
 src_compile() {
 	local myconf="--with-gnu-ld"
 	use nls || myconf="${myconf} --disable-nls"
+	use selinux && myconf="${myconf} --enable-flask"
 
 	econf ${myconf} || die
 	emake || die
